# XamlIslands

./: .gitignore  CMakeLists.txt  XamlIslands.props  XamlIslands.sln  license.txt  readme.md
Common/: Sample.cpp  Sample.hpp  WinMain.cpp  XamlIslands.manifest
FilePicker/: CMakeLists.txt  FilePicker.cpp  FilePicker.vcxproj  FilePicker.vcxproj.filters
HelloXaml/: CMakeLists.txt  HelloXaml.cpp  HelloXaml.vcxproj  HelloXaml.vcxproj.filters
